[gd_scene load_steps=3 format=3 uid="uid://curb0b1vfaaqa"]

[ext_resource type="Script" path="res://CustomerMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cxeo5xliv2l43" path="res://icon.png" id="2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = -8.0
offset_right = 1163.0
offset_bottom = 656.0

[node name="CustomerImage" type="Sprite2D" parent="."]
position = Vector2(269.95, 346.059)
scale = Vector2(4.90209, 7.83794)
texture = ExtResource("2")

[node name="CustomerMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 643.0
offset_top = 174.0
offset_right = 1023.0
offset_bottom = 328.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 603.0
offset_top = 564.0
offset_right = 702.0
offset_bottom = 609.0
text = "Back"

[node name="NextCustomer" type="Button" parent="."]
layout_mode = 0
offset_left = 921.0
offset_top = 558.0
offset_right = 1046.0
offset_bottom = 610.0
text = "Next Customer"

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="NextCustomer" to="." method="_on_NextCustomer_pressed"]
